recursion.cons.lessons.recursion.cons.Nth.scala.error
nth:3: error: not found: value list
	return list.head 
               ^