recursion.cons.lessons.recursion.cons.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
	if (n==1)
	return list.head 
	return nth(l.tail,n-1)
}
